--- a/css/index.css
+++ b/css/index.css
@@ -141,17 +141,44 @@ header {
 .logo {
   width: 15%;
 }
+@media (max-width:800px) {
+  .logo {
+    width: 100%;
+  }
+}
 nav {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   width: 85%;
+}
+@media (max-width:800px) {
+  nav {
+    width: 100%;
+  }
 }
 nav a {
   font-size: 2rem;
   color: white;
   text-decoration: none;
   font-family: 'Courgette', cursive;
+}
+footer nav.footer {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 36px;
+}
+footer {
+  height: 36px;
+  color: white;
+  background-color: #50bde4;
+}
+nav.footer a {
+  font-size: 1.3rem;
+  font-family: cursive, arial, 'Times New Roman', Times, serif;
 }
 .pageContainer {
   display: flex;
@@ -161,24 +188,62 @@ nav a {
   margin: 12px auto;
   background-color: #e9f5f8;
 }
-.main {
+@media (max-width:1000px) {
+  .pageContainer {
+    width: 85%;
+  }
+}
+@media (max-width:800px) {
+  .pageContainer {
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 80%;
+  }
+}
+@media (max-width:600px) {
+  .pageContainer {
+    width: 90%;
+  }
+}
+@media (max-width:500px) {
+  .pageContainer {
+    width: 100%;
+  }
+}
+main {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-.section {
+@media (max-width:800px) {
+  main {
+    flex-direction: column;
+    width: 100%;
+  }
+}
+section {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+@media (max-width:800px) {
+  section {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 .box {
   width: 90%;
-  height: 224px;
+  min-height: auto;
   margin: 24px auto;
   border: 3px solid #50bde4;
   font-family: arial;
-  position: relative;
   line-height: 1.3;
+}
+@media (max-width:500px) {
+  .box {
+    width: 98%;
+  }
 }
 .box2 {
   height: auto;
@@ -195,6 +260,7 @@ nav a {
 .flex-image {
   display: flex;
   justify-content: space-evenly;
+  height: auto;
 }
 .flex-image img {
   width: 25%;
@@ -233,20 +299,31 @@ nav a {
 }
 .box a {
   width: 108px;
-  margin: 12px calc((100% - 108px) / 2);
+  margin: 24px calc((100% - 108px) / 2);
   text-decoration: none;
   background-color: darkBlue;
   color: #50bde4;
   border-radius: 12px;
   padding: 10px;
-  position: absolute;
-  bottom: 12px;
   text-align: center;
   font-family: 'Courgette', cursive;
 }
 .sixty {
   width: 60%;
 }
+@media (max-width:800px) {
+  div.sixty {
+    width: 100%;
+  }
+}
 .forty {
   width: 40%;
+}
+@media (max-width:800px) {
+  div.forty {
+    width: 100%;
+  }
+}
+.button {
+  margin: 18px;
 }
