--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,6 +10,7 @@
 @media@media1000 {
     .pageContainer {
         width:85%;
+        margin:24px auto;
     }
 }
 
@@ -33,27 +34,27 @@
     }
 }
 
-main {
+main.homeMain {
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
 }
 
 @media@media800 {
-    main {
+    main.homeMain {
         flex-direction:column;
         width:100%;
     }
 }
 
-section {
+section.homeSection {
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
 }
 
 @media@media800 {
-    section {
+    section.homeSection {
         flex-direction:column;
         width:100%;
     }
