--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,5 @@
 @media1000: ~'(max-width:1000px)';
+@media900: ~'(max-width:900px)';
 @media800: ~'(max-width:800px)';
 @media600: ~'(max-width:600px)';
 @media500: ~'(max-width:500px)';
