--- a/less/about.less
+++ b/less/about.less
@@ -78,3 +78,22 @@
     font-size:1.5rem;
     font-family:@courgette;
 }
+
+/* CONTACT PAGE */
+
+.box ul {
+    margin:24px;
+    line-height:2.25;
+}
+
+a.github {
+    color:@darkBlue;
+    text-decoration:none;
+    padding:4px;
+}
+
+a.github:hover {
+    color:@lightBlue;
+    background-color:@darkBlue;
+    text-decoration:underline;
+}
