--- a/less/home-page.less
+++ b/less/home-page.less
@@ -138,7 +138,7 @@ section.homeSection {
     font-family:@courgette;
 }
 
-.box a {
+.box a.homePageLink {
     width:108px;
     margin:24px calc((100% - 108px) / 2);
     text-decoration:none;
